--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,39 +12,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- PADDED VIEWPORT -->
   <div class="viewport">
     <div class="flipbook-container">
       <div id="flipbook">
-        <div class="page">
-          <img src="assets/page1.png" alt="Page 1">
-        </div>
-        <div class="page">
-          <!-- Added controls & preload -->
-          <video
-            id="video-page"
-            muted
-            controls
-            preload="metadata"
-          >
-            <source src="assets/video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <div class="page">
-          <img src="assets/page3.png" alt="Page 3">
-        </div>
-        <div class="page">
-          <img src="assets/page4.png" alt="Page 4">
-          <a href="https://drive.google.com/drive/folders/15PE-fq3W8_XyKG9D-A5u8h8lyUxyctR_?usp=sharing"
-             target="_blank"
-             class="download-banner"
-             title="Download Memories">
-            <img src="assets/icon_download.png" alt="Download Memories">
-          </a>
-        </div>
+        <!-- pages injected here -->
       </div>
-
       <button id="prev-btn" class="nav-btn">
         <svg viewBox="0 0 24 24"><path d="M15 18l-6-6 6-6" fill="none" stroke="white" stroke-width="2"/></svg>
       </button>
@@ -57,79 +28,162 @@
 
   <script>
     $(function() {
-      var fb      = $('#flipbook'),
-          videoEl = $('#video-page').get(0),
-          totalPages;
+      const fb = $('#flipbook');
+      const exts = ['png','jpg','jpeg','mp4'];
+      let pages = [], videoPageNum = null;
 
-      // Init Turn.js
-      fb.turn({
-        width       : 720,
-        height      : 1280,
-        autoCenter  : false,
-        display     : 'single',
-        acceleration: true,
-        gradients   : true,
-        elevation   : 50,
-        corners     : 'tr,br',
-        when: {
-          turning: function() {
-            if (videoEl) {
-              videoEl.pause();
-              videoEl.currentTime = 0;
-            }
-          },
-          turned: function(e, page) {
-            toggleArrows(page);
-            if (page === 2 && videoEl) {
-              videoEl.muted = false;
-              videoEl.controls = true;  // ensure controls are visible
-              videoEl.play().catch(()=>{});
-            } else if (videoEl) {
-              videoEl.controls = false; // hide when off-screen (optional)
+      // helper: test whether assets/page{num}.{ext} actually loads
+      function exists(num, ext) {
+        return new Promise(resolve => {
+          if (ext === 'mp4') {
+            const vid = document.createElement('video');
+            vid.src = `assets/page${num}.${ext}`;
+            vid.onloadedmetadata = () => resolve(true);
+            vid.onerror        = () => resolve(false);
+          } else {
+            const img = new Image();
+            img.src    = `assets/page${num}.${ext}`;
+            img.onload = () => resolve(true);
+            img.onerror= () => resolve(false);
+          }
+        });
+      }
+
+      // discover pages by probing page1.ext, page2.ext, … until none found
+      (async () => {
+        for (let i = 1; ; i++) {
+          let foundExt = null;
+          for (let ext of exts) {
+            // await each probe
+            // (file:// and http:// both trigger load/error events)
+            // stop on first that exists
+            if (await exists(i, ext)) {
+              foundExt = ext;
+              break;
             }
           }
+          if (!foundExt) break;
+          pages.push({ num: i, ext: foundExt, file: `page${i}.${foundExt}` });
+          if (foundExt === 'mp4') videoPageNum = i;
         }
-      });
-      totalPages = fb.turn('pages');
 
-      function toggleArrows(page) {
-        $('#prev-btn')[ page <= 1 ? 'hide':'show' ]();
-        $('#next-btn')[ page >= totalPages ? 'hide':'show' ]();
-      }
-      toggleArrows(1);
+        const totalPages = pages.length;
+        if (!totalPages) {
+          console.error('No page files found in assets/');
+          return;
+        }
 
-      function goTo(page) {
-        page = Math.min(Math.max(page,1), totalPages);
-        toggleArrows(page);
-        fb.turn('page', page);
-      }
+        // build the DOM for each page
+        pages.forEach((p, idx) => {
+          const $pg = $('<div>').addClass('page');
+          if (p.ext === 'mp4') {
+            const $vid = $('<video>', {
+              id: 'video-page',
+              muted: true,
+              controls: false,
+              preload: 'metadata'
+            }).css({ width:'100%', height:'100%', objectFit:'cover' });
+            $('<source>', {
+              src: `assets/${p.file}`,
+              type: 'video/mp4'
+            }).appendTo($vid);
+            $pg.append($vid);
+          } else {
+            $('<img>', {
+              src: `assets/${p.file}`,
+              alt: `Page ${p.num}`
+            }).appendTo($pg);
+          }
 
-      $('#prev-btn').click(()=>goTo(fb.turn('page')-1));
-      $('#next-btn').click(()=>goTo(fb.turn('page')+1));
-      $(document).keydown(e=>{
-        if(e.key==='ArrowLeft'){ e.preventDefault(); goTo(fb.turn('page')-1); }
-        if(e.key==='ArrowRight'){ e.preventDefault(); goTo(fb.turn('page')+1); }
-      });
+          // always overlay download icon on the very last page
+          if (idx === totalPages - 1) {
+            const $a = $('<a>', {
+              href: 'https://drive.google.com/drive/folders/1RflXkSgh1AHwnBYUk3zVf06pVOywQc4J?usp=drive_link',
+              target: '_blank',
+              class: 'download-banner',
+              title: 'Download Memories'
+            });
+            $('<img>', {
+              src: 'assets/icon_download.png',
+              alt: 'Download Memories'
+            }).appendTo($a);
+            $pg.append($a);
+          }
 
-      // swipe
-      let touchX = null;
-      fb.on('touchstart', e=>{ touchX = e.originalEvent.touches[0].clientX; });
-      fb.on('touchend', e=>{
-        if(touchX===null) return;
-        let dx = touchX - e.originalEvent.changedTouches[0].clientX;
-        if(dx>50) goTo(fb.turn('page')+1);
-        else if(dx< -50) goTo(fb.turn('page')-1);
-        touchX = null;
-      });
+          fb.append($pg);
+        });
 
-      // SCALE on load & resize
-      function resizeFlipbook(){
-        const w = $('.viewport').width(),
-              h = $('.viewport').height(),
-              scale = Math.min(w/720, h/1280);
-        $('.flipbook-container').css('transform', 'scale('+scale+')');
-      }
-      $(window).on('load resize', resizeFlipbook);
+        // initialize turn.js with exactly the pages we found
+        const videoEl = $('#video-page').get(0);
+        fb.turn({
+          width       : 720,
+          height      : 1280,
+          autoCenter  : false,
+          display     : 'single',
+          acceleration: true,
+          gradients   : true,
+          elevation   : 50,
+          corners     : 'tr,br',
+          when: {
+            turning: () => {
+              if (videoEl) {
+                videoEl.pause();
+                videoEl.currentTime = 0;
+              }
+            },
+            turned: (e, page) => {
+              toggleArrows(page);
+              if (page === videoPageNum && videoEl) {
+                videoEl.muted    = false;
+                videoEl.controls = true;
+                videoEl.play().catch(()=>{});
+              } else if (videoEl) {
+                videoEl.controls = false;
+              }
+            }
+          }
+        });
+
+        // show/hide arrows
+        function toggleArrows(page) {
+          $('#prev-btn')[ page <= 1           ? 'hide' : 'show' ]();
+          $('#next-btn')[ page >= totalPages  ? 'hide' : 'show' ]();
+        }
+        toggleArrows(1);
+
+        // navigation helpers
+        function goTo(page) {
+          page = Math.min(Math.max(page, 1), totalPages);
+          toggleArrows(page);
+          fb.turn('page', page);
+        }
+        $('#prev-btn').click(()=>goTo(fb.turn('page') - 1));
+        $('#next-btn').click(()=>goTo(fb.turn('page') + 1));
+        $(document).keydown(e=>{
+          if (e.key === 'ArrowLeft')  { e.preventDefault(); goTo(fb.turn('page') - 1); }
+          if (e.key === 'ArrowRight') { e.preventDefault(); goTo(fb.turn('page') + 1); }
+        });
+
+        // touch swipe
+        let touchX = null;
+        fb.on('touchstart', e=>{ touchX = e.originalEvent.touches[0].clientX; });
+        fb.on('touchend', e=>{
+          if (touchX === null) return;
+          const dx = touchX - e.originalEvent.changedTouches[0].clientX;
+          if (dx > 50)      goTo(fb.turn('page') + 1);
+          else if (dx < -50)goTo(fb.turn('page') - 1);
+          touchX = null;
+        });
+
+        // responsive scaling
+        function resizeFlipbook(){
+          const w = $('.viewport').width(),
+                h = $('.viewport').height(),
+                s = Math.min(w/720, h/1280);
+          $('.flipbook-container').css('transform', 'scale('+s+')');
+        }
+        $(window).on('load resize', resizeFlipbook);
+      })();
     });
   </script>
 </body>
