Scaling Fix Test 1

--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- ensure proper scaling on mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- lock to device width, no auto-zoom -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>My Flipbook</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <!-- jQuery & turn.js -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/turn.min.js"></script>
+
+  <!-- your CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="viewport">
     <div class="flipbook-container">
-      <div id="flipbook">
-        <!-- pages injected here -->
-      </div>
+      <div id="flipbook"></div>
       <button id="prev-btn" class="nav-btn">
         <svg viewBox="0 0 24 24"><path d="M15 18l-6-6 6-6" fill="none" stroke="white" stroke-width="2"/></svg>
       </button>
@@ -26,165 +27,7 @@
     </div>
   </div>
 
-  <script>
-    $(function() {
-      const fb = $('#flipbook');
-      const exts = ['png','jpg','jpeg','mp4'];
-      let pages = [], videoPageNum = null;
-
-      // helper: test whether assets/page{num}.{ext} actually loads
-      function exists(num, ext) {
-        return new Promise(resolve => {
-          if (ext === 'mp4') {
-            const vid = document.createElement('video');
-            vid.src = `assets/page${num}.${ext}`;
-            vid.onloadedmetadata = () => resolve(true);
-            vid.onerror        = () => resolve(false);
-          } else {
-            const img = new Image();
-            img.src    = `assets/page${num}.${ext}`;
-            img.onload = () => resolve(true);
-            img.onerror= () => resolve(false);
-          }
-        });
-      }
-
-      // discover pages by probing page1.ext, page2.ext, … until none found
-      (async () => {
-        for (let i = 1; ; i++) {
-          let foundExt = null;
-          for (let ext of exts) {
-            // await each probe
-            // (file:// and http:// both trigger load/error events)
-            // stop on first that exists
-            if (await exists(i, ext)) {
-              foundExt = ext;
-              break;
-            }
-          }
-          if (!foundExt) break;
-          pages.push({ num: i, ext: foundExt, file: `page${i}.${foundExt}` });
-          if (foundExt === 'mp4') videoPageNum = i;
-        }
-
-        const totalPages = pages.length;
-        if (!totalPages) {
-          console.error('No page files found in assets/');
-          return;
-        }
-
-        // build the DOM for each page
-        pages.forEach((p, idx) => {
-          const $pg = $('<div>').addClass('page');
-          if (p.ext === 'mp4') {
-            const $vid = $('<video>', {
-              id: 'video-page',
-              muted: true,
-              controls: false,
-              preload: 'metadata'
-            }).css({ width:'100%', height:'100%', objectFit:'cover' });
-            $('<source>', {
-              src: `assets/${p.file}`,
-              type: 'video/mp4'
-            }).appendTo($vid);
-            $pg.append($vid);
-          } else {
-            $('<img>', {
-              src: `assets/${p.file}`,
-              alt: `Page ${p.num}`
-            }).appendTo($pg);
-          }
-
-          // always overlay download icon on the very last page
-          if (idx === totalPages - 1) {
-            const $a = $('<a>', {
-              href: 'https://drive.google.com/drive/folders/1RflXkSgh1AHwnBYUk3zVf06pVOywQc4J?usp=drive_link',
-              target: '_blank',
-              class: 'download-banner',
-              title: 'Download Memories'
-            });
-            $('<img>', {
-              src: 'assets/icon_download.png',
-              alt: 'Download Memories'
-            }).appendTo($a);
-            $pg.append($a);
-          }
-
-          fb.append($pg);
-        });
-
-        // initialize turn.js with exactly the pages we found
-        const videoEl = $('#video-page').get(0);
-        fb.turn({
-          width       : 720,
-          height      : 1280,
-          autoCenter  : false,
-          display     : 'single',
-          acceleration: true,
-          gradients   : true,
-          elevation   : 50,
-          corners     : 'tr,br',
-          when: {
-            turning: () => {
-              if (videoEl) {
-                videoEl.pause();
-                videoEl.currentTime = 0;
-              }
-            },
-            turned: (e, page) => {
-              toggleArrows(page);
-              if (page === videoPageNum && videoEl) {
-                videoEl.muted    = false;
-                videoEl.controls = true;
-                videoEl.play().catch(()=>{});
-              } else if (videoEl) {
-                videoEl.controls = false;
-              }
-            }
-          }
-        });
-
-        // show/hide arrows
-        function toggleArrows(page) {
-          $('#prev-btn')[ page <= 1           ? 'hide' : 'show' ]();
-          $('#next-btn')[ page >= totalPages  ? 'hide' : 'show' ]();
-        }
-        toggleArrows(1);
-
-        // navigation helpers
-        function goTo(page) {
-          page = Math.min(Math.max(page, 1), totalPages);
-          toggleArrows(page);
-          fb.turn('page', page);
-        }
-        $('#prev-btn').click(()=>goTo(fb.turn('page') - 1));
-        $('#next-btn').click(()=>goTo(fb.turn('page') + 1));
-        $(document).keydown(e=>{
-          if (e.key === 'ArrowLeft')  { e.preventDefault(); goTo(fb.turn('page') - 1); }
-          if (e.key === 'ArrowRight') { e.preventDefault(); goTo(fb.turn('page') + 1); }
-        });
-
-        // touch swipe
-        let touchX = null;
-        fb.on('touchstart', e=>{ touchX = e.originalEvent.touches[0].clientX; });
-        fb.on('touchend', e=>{
-          if (touchX === null) return;
-          const dx = touchX - e.originalEvent.changedTouches[0].clientX;
-          if (dx > 50)      goTo(fb.turn('page') + 1);
-          else if (dx < -50)goTo(fb.turn('page') - 1);
-          touchX = null;
-        });
-
-        // responsive scaling
-        function resizeFlipbook(){
-          const w = $('.viewport').width(),
-                h = $('.viewport').height(),
-                s = Math.min(w/720, h/1280);
-          $('.flipbook-container').css('transform', 'scale('+s+')');
-        }
-        $(window).on('load resize', resizeFlipbook);
-      })();
-    });
-  </script>
+  <!-- your initialization script -->
+  <script src="js/flipbook-init.js"></script>
 </body>
 </html>
